public static class AnimationConstants
{
    public const string IsWalking = "isWalking";
    public const string WalkType = "WalkType";
    public const string Attack = "Attack";
    public const string AttackType = "AttackType";
    public const string AttackDistance = "AttackDistance";

    public const string BaseLayerBlend = "Blend";
    public const string IsAiming = "isAiming";
    public const string JumpTrigger = "Jump";
    public const string IsGround = "isGround";
    public const string LegsLayer = "LegsJob";
    public const string HandsLayer = "HandsJob";
    public const string BaseLayer = "Base Layer";
}

